--- a/spring-petclinic-api-gateway/src/main/resources/static/index.html
+++ b/spring-petclinic-api-gateway/src/main/resources/static/index.html
@@ -46,6 +46,11 @@
     <script src="/scripts/vet-list/vet-list.js"></script>
     <script src="/scripts/vet-list/vet-list.controller.js"></script>
     <script src="/scripts/vet-list/vet-list.component.js"></script>
+
+    <script src="/scripts/room-list/room-list.js"></script>
+    <script src="/scripts/room-list/room-list.controller.js"></script>
+    <script src="/scripts/room-list/room-list.component.js"></script>
+
 </head>
 
 <body class="container">
