Add last used to Frontend

--- a/spring-petclinic-api-gateway/src/main/resources/static/scripts/room-list/room-list.template.html
+++ b/spring-petclinic-api-gateway/src/main/resources/static/scripts/room-list/room-list.template.html
@@ -5,6 +5,7 @@
         <th>ID</th>
         <th>Name</th>
         <th>Room Type</th>
+        <th>Last Used</th>
     </tr>
     </thead>
 
@@ -12,5 +13,6 @@
         <td>{{room.id}} </td>
         <td>{{room.name}} </td>
         <td>{{room.roomType}}</td>
+        <td>{{room.lastUsed}}</td>
     </tr>
 </table>
